--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <div>
                 <h1>We provide <span class="underline">solutions</span></br>
                     for your business!</h1>
-                <div class="inputs">
-                    <input type="input" value="Get Started">
-                    <input type="input" value="Our Services">
+                <div class="buttons">
+                    <button type="button"><a href="#about">Get Started</a></button>
+                    <button type="button"><a href="#services">Our Services</a></button>
                 </div>
             </div>
             <div class="main-img"><img src="images/intro-img.svg"></div>
