--- a/index.html
+++ b/index.html
@@ -66,38 +66,45 @@
     </main>
 
     <section class="about" id="about">
-        <div>
+        <div class="titulo">
             <h2>About Us</h2>
             <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua.</h4>
         </div>
-        <div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.</p>
-            <div>
-                <div><img src="" alt=""></div>
-                <h4>Eiusmod Tempor</h4>
-                <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est
-                    eligendi</p>
+        <div class="info-columns">
+            <div class="info-col-1">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip
+                    ex ea commodo consequat.</p>
+                <div>
+                    <div><img src="" alt=""></div>
+                    <h4>Eiusmod Tempor</h4>
+                    <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis
+                        est
+                        eligendi</p>
+                </div>
+                <div>
+                    <div><img src="" alt=""></div>
+                    <h4>Magni Dolores</h4>
+                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                        est
+                        laborum</p>
+                </div>
+                <div>
+                    <div><img src="" alt=""></div>
+                    <h4>Dolor Sitema</h4>
+                    <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
+                        tarad
+                        limino ata</p>
+                </div>
             </div>
-            <div>
-                <div><img src="" alt=""></div>
-                <h4>Magni Dolores</h4>
-                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                    laborum</p>
-            </div>
-            <div>
-                <div><img src="" alt=""></div>
-                <h4>Dolor Sitema</h4>
-                <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad
-                    limino ata</p>
-            </div>
-            <div><img src="" alt=""></div>
+            <div class="info-col-2"><img src="images/about-img.svg"></div>
         </div>
 
         <div>
-            <div><img src="" alt=""></div>
+            <div class="info-col-2"><img src="images/about-extra-1.svg"></div>
             <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
             <p>Ipsum in aspernatur ut possimus sint. Quia omnis est occaecati possimus ea. Quas molestiae perspiciatis
                 occaecati qui rerum. Deleniti quod porro sed quisquam saepe. Numquam mollitia recusandae non ad at et a.
