se agrega footer, falta @media

--- a/index.html
+++ b/index.html
@@ -68,36 +68,33 @@
     <section class="about" id="about">
         <div class="titulo">
             <h2>About Us</h2>
-            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.</p>
         </div>
         <div class="info-columns">
             <div class="info-col-1">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip
-                    ex ea commodo consequat.</p>
-                <div>
-                    <div><img src="" alt=""></div>
-                    <h4>Eiusmod Tempor</h4>
-                    <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis
-                        est
-                        eligendi</p>
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.</p>
+                <div class="data">
+                    <div><i class="fa fa-shopping-bag"></i></div>
+                    <div class="data-paragraph">
+                        <h4>Eiusmod Tempor</h4>
+                        <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta
+                            nobis est eligendi</p>
+                    </div>
                 </div>
                 <div>
-                    <div><img src="" alt=""></div>
+                    <div class="data"><i class="fa fa-photo"></i></div>
                     <h4>Magni Dolores</h4>
                     <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                        est
-                        laborum</p>
+                        est laborum</p>
                 </div>
-                <div>
-                    <div><img src="" alt=""></div>
+                <div class="data">
+                    <div><i class="fa fa-bar-chart"></i></div>
                     <h4>Dolor Sitema</h4>
                     <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
-                        tarad
-                        limino ata</p>
+                        tarad limino ata</p>
                 </div>
             </div>
             <div class="info-col-2"><img src="images/about-img.svg"></div>
@@ -322,86 +319,63 @@
         </div>
     </section>
 
-    <footer>
-
-        <div class="ft-columns">
-
-            <div class="ft-p1">
-
+    <footer class="footer-1">
+        <div class="footer-columns">
+            <div class="ft-col-1">
                 <h1>WAYNE</h1>
-
                 <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies
                     darta donna mare fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin
                     fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
-
             </div>
 
-            <div class="ft-p4">
-
+            <div class="ft-col-2">
                 <h4>USEFUL LINKS</h4>
-
-                <p><a href="#header">Home</a></p>
-                <p><a href="#about">About us</a></p>
-                <p><a href="#services">Services</a></p>
-                <p><a href="#header">Terms of service</a></p>
-                <p><a href="#header">Privacy policy</a></p>
-
+                <ul>
+                    <li><a href="#header">Home</a></li>
+                    <li><a href="#about">About us</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#header">Terms of service</a></li>
+                    <li><a href="#header">Privacy policy</a></li>
+                </ul>
             </div>
 
-            <div class="ft-p3">
-
+            <div class="ft-col-3">
                 <h4>CONTACT US</h4>
-
                 <p> Adam Street </br>
                     New York, NY 535022 </br>
                     United States </br>
                     <span>Phone:</span> +1 5589 55488 55 </br>
                     <span>Email:</span> info@example.com </br></p>
-
                 <div class="icons">
-
                     <div class="rrss"><a href="https://twitter.com/?lang=es"><i class="fab fa-twitter"></i></a></div>
                     <div class="rrss"><a href="https://es-la.facebook.com/"><i class="fab fa-facebook-f"></i></a></div>
-                    <div class="rrss"><a href="https://www.instagram.com/?hl=es-la"><i class="fab fa-instagram"></i></a>
-                    </div>
-                    <div class="rrss"><a href="https://plus.google.com/about?hl=es"><i
-                                class="fab fa-google-plus-g"></i></a></div>
+                    <div class="rrss"><a href="https://www.instagram.com/?hl=es-la"><i class="fab fa-instagram"></i></a></div>
+                    <div class="rrss"><a href="https://plus.google.com/about?hl=es"><i class="fab fa-google-plus-g"></i></a></div>
                     <div class="rrss"><a href="https://ar.linkedin.com/"><i class="fab fa-linkedin-in"></i></a></div>
-
                 </div>
-
             </div>
 
-            <div class="ft-p2">
+            <div class="ft-col-4">
                 <h4>OUR NEWSLETTER</h4>
                 <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna veniam enim veniam
                     illum dolore
                     legam minim quorum culpa amet magna export quem marada parida nodela caramase seza.</p>
-
                 <form action="/subscribe">
                     <div class="subscribe">
                         <input required type="email" name="email" class="email-form">
                         <input type="submit" class="submit" value="Subscribe">
-
                     </div>
                 </form>
-
             </div>
-
         </div>
-
     </footer>
 
     <footer class="copyright">
         <p>© Copyright <span>Wayne Enterprises</span>. All Rights Reserved</p>
         <p>Designed by <a href="#header">...</a></p>
-
         <div>
-
             <div class="arrow"><a href="#top"><i class="fas fa-angle-up"></i></a></div>
-
         </div>
-
     </footer>
 
 </body>
