footer falta @media

--- a/index.html
+++ b/index.html
@@ -340,26 +340,32 @@
             </div>
 
             <div class="ft-col-3">
-                <h4>CONTACT US</h4>
-                <p> Adam Street </br>
-                    New York, NY 535022 </br>
-                    United States </br>
-                    <span>Phone:</span> +1 5589 55488 55 </br>
-                    <span>Email:</span> info@example.com </br></p>
+                <div>
+                    <h4>CONTACT US</h4>
+                    <p> Adam Street </br>
+                        New York, NY 535022 </br>
+                        United States </br>
+                        <span>Phone:</span> +1 5589 55488 55 </br>
+                        <span>Email:</span> info@example.com </br></p>
+                </div>
                 <div class="icons">
                     <div class="rrss"><a href="https://twitter.com/?lang=es"><i class="fab fa-twitter"></i></a></div>
                     <div class="rrss"><a href="https://es-la.facebook.com/"><i class="fab fa-facebook-f"></i></a></div>
-                    <div class="rrss"><a href="https://www.instagram.com/?hl=es-la"><i class="fab fa-instagram"></i></a></div>
-                    <div class="rrss"><a href="https://plus.google.com/about?hl=es"><i class="fab fa-google-plus-g"></i></a></div>
+                    <div class="rrss"><a href="https://www.instagram.com/?hl=es-la"><i class="fab fa-instagram"></i></a>
+                    </div>
+                    <div class="rrss"><a href="https://plus.google.com/about?hl=es"><i
+                                class="fab fa-google-plus-g"></i></a></div>
                     <div class="rrss"><a href="https://ar.linkedin.com/"><i class="fab fa-linkedin-in"></i></a></div>
                 </div>
             </div>
 
             <div class="ft-col-4">
-                <h4>OUR NEWSLETTER</h4>
-                <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna veniam enim veniam
-                    illum dolore
-                    legam minim quorum culpa amet magna export quem marada parida nodela caramase seza.</p>
+                <div>
+                    <h4>OUR NEWSLETTER</h4>
+                    <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna veniam enim veniam
+                        illum dolore
+                        legam minim quorum culpa amet magna export quem marada parida nodela caramase seza.</p>
+                </div>
                 <form action="/subscribe">
                     <div class="subscribe">
                         <input required type="email" name="email" class="email-form">
