--- a/index.html
+++ b/index.html
@@ -72,54 +72,75 @@
                 dolore magna aliqua.</p>
         </div>
         <div class="info-columns">
-            <div class="info-col-1">
+            <div class="info-col-text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat.</p>
                 <div class="data">
-                    <div><i class="fa fa-shopping-bag"></i></div>
+                    <div class="about-icons"><i class="fa fa-shopping-bag"></i></div>
                     <div class="data-paragraph">
-                        <h4>Eiusmod Tempor</h4>
+                        <a href="#top">
+                            <h4>Eiusmod Tempor</h4>
+                        </a>
                         <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta
                             nobis est eligendi</p>
                     </div>
                 </div>
-                <div>
-                    <div class="data"><i class="fa fa-photo"></i></div>
-                    <h4>Magni Dolores</h4>
-                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                        est laborum</p>
+                <div class="data">
+                    <div class="about-icons"><i class="fa fa-photo"></i></div>
+                    <div class="data-paragraph">
+                        <a href="#data">
+                            <h4>Magni Dolores</h4>
+                        </a>
+                        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                            anim id
+                            est laborum</p>
+                    </div>
                 </div>
                 <div class="data">
-                    <div><i class="fa fa-bar-chart"></i></div>
-                    <h4>Dolor Sitema</h4>
-                    <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
-                        tarad limino ata</p>
+                    <div class="about-icons"><i class="fa fa-bar-chart"></i></div>
+                    <div class="data-paragraph">
+                        <a href="#data">
+                            <h4>Dolor Sitema</h4>
+                        </a>
+                        <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat
+                            tarad limino ata</p>
+                    </div>
                 </div>
             </div>
-            <div class="info-col-2"><img src="images/about-img.svg"></div>
+            <div class="info-col-img"><img src="images/about-img.svg"></div>
         </div>
-
-        <div>
-            <div class="info-col-2"><img src="images/about-extra-1.svg"></div>
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
-            <p>Ipsum in aspernatur ut possimus sint. Quia omnis est occaecati possimus ea. Quas molestiae perspiciatis
-                occaecati qui rerum. Deleniti quod porro sed quisquam saepe. Numquam mollitia recusandae non ad at et a.
-            </p>
-            <p>Ad vitae recusandae odit possimus. Quaerat cum ipsum corrupti. Odit qui asperiores ea corporis deserunt
-                veritatis quidem expedita perferendis. Qui rerum eligendi ex doloribus quia sit. Porro rerum eum eum.
-            </p>
+        <div class="info-columns-mid">
+            <div class="info-col-img"><img src="images/about-extra-1.svg"></div>
+            <div class="info-col-text">
+                <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+                <p>Ipsum in aspernatur ut possimus sint. Quia omnis est occaecati possimus ea. Quas molestiae
+                    perspiciatis
+                    occaecati qui rerum. Deleniti quod porro sed quisquam saepe. Numquam mollitia recusandae non ad at
+                    et a.
+                </p>
+                <p>Ad vitae recusandae odit possimus. Quaerat cum ipsum corrupti. Odit qui asperiores ea corporis
+                    deserunt
+                    veritatis quidem expedita perferendis. Qui rerum eligendi ex doloribus quia sit. Porro rerum eum
+                    eum.
+                </p>
+            </div>
         </div>
-
-        <div>
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
-            <p>Ipsum in aspernatur ut possimus sint. Quia omnis est occaecati possimus ea. Quas molestiae perspiciatis
-                occaecati qui rerum. Deleniti quod porro sed quisquam saepe. Numquam mollitia recusandae non ad at et a.
-            </p>
-            <p>Ad vitae recusandae odit possimus. Quaerat cum ipsum corrupti. Odit qui asperiores ea corporis deserunt
-                veritatis quidem expedita perferendis. Qui rerum eligendi ex doloribus quia sit. Porro rerum eum eum.
-            </p>
-            <div><img src="" alt=""></div>
+        <div class="info-columns">
+            <div class="info-col-text">
+                <h3>Neque saepe temporibus repellat ea ipsum et. Id vel et quia tempora facere reprehenderit.</h3>
+                <p>Delectus alias ut incidunt delectus nam placeat in consequatur. Sed cupiditate quia ea quis. Voluptas
+                    nemo qui aut distinctio. Cumque fugit earum est quam officiis numquam. Ducimus corporis autem at
+                    blanditiis beatae incidunt sunt.
+                </p>
+                <p>Voluptas saepe natus quidem blanditiis. Non sunt impedit voluptas mollitia beatae. Qui esse
+                    molestias. Laudantium libero nisi vitae debitis. Dolorem cupiditate est perferendis iusto.
+                </p>
+                <p>Eum quia in. Magni quas ipsum a. Quis ex voluptatem inventore sint quia modi. Numquam est aut fuga
+                    mollitia exercitationem nam accusantium provident quia.</p>
+            </div>
+            <div class="info-col-img"><img src="images/about-extra-2.svg"></div>
         </div>
     </section>
 
