--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,600,700&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700&display=swap" rel="stylesheet">
+    <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5a2fe3cd32.js" crossorigin="anonymous"></script>
 </head>
 
@@ -89,7 +91,7 @@
                 <div class="data">
                     <div class="about-icons"><i class="fa fa-photo"></i></div>
                     <div class="data-paragraph">
-                        <a href="#data">
+                        <a href="#top">
                             <h4>Magni Dolores</h4>
                         </a>
                         <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
@@ -100,7 +102,7 @@
                 <div class="data">
                     <div class="about-icons"><i class="fa fa-bar-chart"></i></div>
                     <div class="data-paragraph">
-                        <a href="#data">
+                        <a href="#top">
                             <h4>Dolor Sitema</h4>
                         </a>
                         <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -145,55 +147,70 @@
     </section>
 
     <section class="services" id="services">
-        <div>
+        <div class="titulo">
             <h2>Services</h2>
-            <h4>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.
-            </h4>
+            <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.
+            </p>
         </div>
 
-        <div>
+        <div class="wc-container">
             <div class="whitecards">
-                <img src="" alt="">
-                <h4>Lorem Ipsum</h4>
-                <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate
-                    non
-                    provident</p>
+                <div class="wc-1"><img src="icons/services/icon-analytics.svg"></div>
+                <div class="data-paragraph">
+                    <a href="#top"><h4>Lorem Ipsum</h4></a>
+                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati
+                        cupiditate
+                        non
+                        provident</p>
+                </div>
             </div>
 
             <div class="whitecards">
-                <img src="" alt="">
-                <h4>Dolor Sitema</h4>
-                <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad
-                    limino ata</p>
+                <div class="wc-2"><img src="icons/services/icon-bookmarks.svg"></div>
+                <div class="data-paragraph">
+                    <a href="#top"><h4>Dolor Sitema</h4></a>
+                    <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+                </div>
+            </div>
+            
+            <div class="whitecards">
+                <div class="wc-3"><img src="icons/services/icon-paper.svg"></div>
+                <div class="data-paragraph">
+                    <a href="#top"><h4>Sed ut perspiciatis</h4></a>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                        pariatur
+                    </p>
+                </div>
             </div>
 
             <div class="whitecards">
-                <img src="" alt="">
-                <h4>Sed ut perspiciatis</h4>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
-                </p>
+                <div class="wc-4"><img src="icons/services/icon-speedometer.svg"></div>
+                <div class="data-paragraph">
+                    <a href="#top"><h4>Magni Dolores</h4></a>
+                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                        est
+                        laborum</p>
+                </div>
             </div>
 
             <div class="whitecards">
-                <img src="" alt="">
-                <h4>Magni Dolores</h4>
-                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                    laborum</p>
+                <div class="wc-5"><img src="icons/services/icon-globe.svg"></div>
+                <div class="data-paragraph">
+                    <a href="#top"><h4>Nemo Enim</h4></a>
+                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
+                        deleniti
+                        atque</p>
+                </div>
             </div>
 
             <div class="whitecards">
-                <img src="" alt="">
-                <h4>Nemo Enim</h4>
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
-                    deleniti
-                    atque</p>
-            </div>
-
-            <div class="whitecards">
-                <img src="" alt="">
-                <h4>Eiusmod Tempor</h4>
-                <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est
-                    eligendi</p>
+                <div class="wc-6"><img src="icons/services/icon-time.svg"></div>
+                <div class="data-paragraph">
+                    <a href="#top"><h4>Eiusmod Tempor</h4></a>
+                    <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis
+                        est
+                        eligendi</p>
+                </div>
             </div>
         </div>
     </section>
