--- a/index.html
+++ b/index.html
@@ -468,20 +468,56 @@
         </div>
     </section>
 
-    <section class="contact" id="contact">
+    <section class="contact_us" id="contact_us">
 
-        <div>
-            <h2>Contact US</h2>
-        </div>
-        <div>
-            <iframe src="" frameborder="0"></iframe>
-        </div>
-        <div>
-            <form action="">
-            </form>
-        </div>
-        </div>
-    </section>
+            <div class="contact-header">
+                <h3>Contact Us</h3>
+            </div>
+            <div id="contact-container">
+                <div id="contact-map">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.3581196170226!2d-74.0084155852272!3d40.71013224566787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1ses!2sbg!4v1570880552974!5m2!1ses!2sbg"
+                        width="100%"" height=" 312px" frameborder="0" style="border:0" ; allowfullscreen=""></iframe>
+                </div>
+                <div class="contact-information">
+                    <div class="contact-details">
+                        <div class="contact-address">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <p>A108 Adam Street, NY 535022</p>
+                        </div>
+                        <div class="cont-email">
+                            <i class="far fa-envelope"></i>
+                            <p>info@example.com</p>
+                        </div>
+                        <div class="cont-telephone">
+                            <i class="fas fa-phone-alt"></i>
+                            <p>+1 5589 55488 55</p>
+                        </div>
+                    </div>
+                    <div class="contact-form">
+                        <form action="/contacto" method="post">
+                            <fieldset class="first_cnt">
+                                <input id="nombre_cnt" required placeholder="Your Name" type="text" name="nombre"
+                                    data-msg="Please enter at least 4 chars">
+                                <input id="email_cnt" required placeholder="Your Email" type="email" name="email"
+                                    data-msg="Please enter a valid email">
+                            </fieldset>
+                            <fieldset class="second_cnt">
+                                <input id="subject_cnt" required placeholder="Subject" type="text" name="asunto"
+                                    data-msg="Please enter at least 8 chars of subject">
+                            </fieldset>
+                            <fieldset class="third_cnt">
+                                <textarea id="textarea_cnt" rows="5" data-msg="Please write something for us" required
+                                    placeholder="Message"></textarea>
+                            </fieldset>
+                        </form>
+                    </div>
+                    <fieldset class="button_cnt">
+                        <button type="submit" title="Send Message"> Send Message </button>
+                    </fieldset>
+                </div>
+            </div>
+        </section>
 
     <footer class="footer-1">
         <div class="footer-columns">
