--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#team">Team</a></li>
                     <li><a href="#top">Drop Down</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
+                    <li><a href="#contact_us">Contact Us</a></li>
                 </ul>
             </div>
 
@@ -46,7 +46,7 @@
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#team">Team</a></li>
                     <li><a href="#top">Drop Down</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
+                    <li><a href="#contact_us">Contact Us</a></li>
                 </ul>
                 <div class="close"><a href="#top"><i class="fas fa-times"></i></a></div>
             </div>
