media query Contact US primera parte

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#team">Team</a></li>
                     <li><a href="#top">Drop Down</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
+                    <li><a href="#contact_us">Contact Us</a></li>
                 </ul>
             </div>
 
@@ -46,7 +46,7 @@
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#team">Team</a></li>
                     <li><a href="#top">Drop Down</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
+                    <li><a href="#contact_us">Contact Us</a></li>
                 </ul>
                 <div class="close"><a href="#top"><i class="fas fa-times"></i></a></div>
             </div>
@@ -495,7 +495,7 @@
                         </div>
                     </div>
                     <div class="contact-form">
-                        <form action="/contacto" method="post">
+                        <form id="contact_form_main" action="/contacto" method="post">
                             <fieldset class="first_cnt">
                                 <input id="nombre_cnt" required placeholder="Your Name" type="text" name="nombre"
                                     data-msg="Please enter at least 4 chars">
