--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
         </div>
     </section>
 
-    <section class="contact_us" id="contact_us">
+   <section class="contact_us" id="contact_us">
 
             <div class="contact-header">
                 <h3>Contact Us</h3>
@@ -495,7 +495,7 @@
                         </div>
                     </div>
                     <div class="contact-form">
-                        <form action="/contacto" method="post">
+                        <form id="contact_form_main" action="/contacto" method="post">
                             <fieldset class="first_cnt">
                                 <input id="nombre_cnt" required placeholder="Your Name" type="text" name="nombre"
                                     data-msg="Please enter at least 4 chars">
