portfolio y team terminados

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                 <img class="app1" src="images/portfolio/app1.jpg">
                 <div class="img-cont-hover">
                     <div class="img-cont-info">
-                        <h2><a href="#portfolio">App 1</a></h2>
+                        <h3><a href="#portfolio">App 1</a></h3>
                         <p>APP</p>
                         <div class="img-links">
                             <a href="portfolio"><i class="far fa-eye"></i></a>
@@ -312,7 +312,7 @@
                 <img class="web3" src="images/portfolio/web3.jpg">
                 <div class="img-cont-hover">
                     <div class="img-cont-info">
-                        <h2><a href="#portfolio">Web 3</a></h2>
+                        <h3><a href="#portfolio">Web 3</a></h3>
                         <p>WEB</p>
                         <div class="img-links">
                             <a href="portfolio"><i class="far fa-eye"></i></a>
@@ -325,7 +325,7 @@
                 <img class="app2" src="images/portfolio/app2.jpg">
                 <div class="img-cont-hover">
                     <div class="img-cont-info">
-                        <h2><a href="#portfolio">App 2</a></h2>
+                        <h3><a href="#portfolio">App 2</a></h3>
                         <p>APP</p>
                         <div class="img-links">
                             <a href="portfolio"><i class="far fa-eye"></i></a>
@@ -338,7 +338,7 @@
                 <img class="card2" src="images/portfolio/card2.jpg">
                 <div class="img-cont-hover">
                     <div class="img-cont-info">
-                        <h2><a href="#portfolio">Web 1</a></h2>
+                        <h3><a href="#portfolio">Web 1</a></h3>
                         <p>CARD</p>
                         <div class="img-links">
                             <a href="portfolio"><i class="far fa-eye"></i></a>
@@ -351,7 +351,7 @@
                 <img class="web2" src="images/portfolio/web2.jpg">
                 <div class="img-cont-hover">
                     <div class="img-cont-info">
-                        <h2><a href="#portfolio">Web 2</a></h2>
+                        <h3><a href="#portfolio">Web 2</a></h3>
                         <p>WEB</p>
                         <div class="img-links">
                             <a href="portfolio"><i class="far fa-eye"></i></a>
@@ -364,7 +364,7 @@
                 <img class="app3" src="images/portfolio/app3.jpg">
                 <div class="img-cont-hover">
                     <div class="img-cont-info">
-                        <h2><a href="#portfolio">App 3</a></h2>
+                        <h3><a href="#portfolio">App 3</a></h3>
                         <p>APP</p>
                         <div class="img-links">
                             <a href="portfolio"><i class="far fa-eye"></i></a>
@@ -377,7 +377,7 @@
                 <img class="card1" src="images/portfolio/card1.jpg">
                 <div class="img-cont-hover">
                     <div class="img-cont-info">
-                        <h2><a href="#portfolio">Card 1</a></h2>
+                        <h3><a href="#portfolio">Card 1</a></h3>
                         <p>CARD</p>
                         <div class="img-links">
                             <a href="portfolio"><i class="far fa-eye"></i></a>
@@ -390,7 +390,7 @@
                 <img class="card3" src="images/portfolio/card3.jpg">
                 <div class="img-cont-hover">
                     <div class="img-cont-info">
-                        <h2><a href="#portfolio">Card 3</a></h2>
+                        <h3><a href="#portfolio">Card 3</a></h3>
                         <p>CARD</p>
                         <div class="img-links">
                             <a href="portfolio"><i class="far fa-eye"></i></a>
@@ -403,7 +403,7 @@
                 <img class="web1" src="images/portfolio/web1.jpg">
                 <div class="img-cont-hover">
                     <div class="img-cont-info">
-                        <h2><a href="#portfolio">Web 1</a></h2>
+                        <h3><a href="#portfolio">Web 1</a></h3>
                         <p>WEB</p>
                         <div class="img-links">
                             <a href="portfolio"><i class="far fa-eye"></i></a>
@@ -428,24 +428,113 @@
             </div>
         </div>
         <div class="button">
-                <a href="#testimonials" class="button active"></a>
-                <a href="#testimonials" class="button"></a>
-                <a href="#testimonials" class="button"></a>
-                <a href="#testimonials" class="button"></a>
-                <a href="#testimonials" class="button"></a>
+            <a href="#testimonials" class="button active"></a>
+            <a href="#testimonials" class="button"></a>
+            <a href="#testimonials" class="button"></a>
+            <a href="#testimonials" class="button"></a>
+            <a href="#testimonials" class="button"></a>
         </div>
     </section>
 
     <section class="team" id="team">
         <div>
-            <h1>Team</h1>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
-            <div>
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+
+            <div class="team-section-header">
+                <h2>Team</h2>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
             </div>
+            <div class="team-img-container">
+                <div class="team-row1">
+                    <div class="team-img" id="img1">
+                        <div class="team-overlay">
+                            <h4>Ben Affleck</h4>
+                            <p>Chief Executive Officer</p>
+                            <div class="team-overlay-links">
+                                <a href="">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                                <a href="">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                                <a href="">
+                                    <i class="fab fa-google-plus-g"></i>
+                                </a>
+                                <a href="">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="team-img" id="img2">
+                        <div class="team-overlay">
+                            <h4>Christian Bale</h4>
+                            <p>Product Manager</p>
+                            <div class="team-overlay-links">
+                                <a href="">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                                <a href="">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                                <a href="">
+                                    <i class="fab fa-google-plus-g"></i>
+                                </a>
+                                <a href="">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="team-row2">
+                    <div class="team-img" id="img3">
+                        <div class="team-overlay">
+                            <h4>Michael Keaton</h4>
+                            <p>CTO</p>
+                            <div class="team-overlay-links">
+                                <a href="">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                                <a href="">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                                <a href="">
+                                    <i class="fab fa-google-plus-g"></i>
+                                </a>
+                                <a href="">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="team-img" id="img4">
+                        <div class="team-overlay">
+                            <h4>Adam West</h4>
+                            <p>Accountant</p>
+                            <div class="team-overlay-links">
+                                <a href="">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                                <a href="">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                                <a href="">
+                                    <i class="fab fa-google-plus-g"></i>
+                                </a>
+                                <a href="">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
         </div>
     </section>
 
