--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                 <div id="contact-map">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.3581196170226!2d-74.0084155852272!3d40.71013224566787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1ses!2sbg!4v1570880552974!5m2!1ses!2sbg"
-                        width="100%"" height=" 312px" frameborder="0" style="border:0" ; allowfullscreen=""></iframe>
+                        width="100%" height=" 312px" frameborder="0" style="border:0" ; allowfullscreen=""></iframe>
                 </div>
                 <div class="contact-information">
                     <div class="contact-details">
@@ -603,7 +603,7 @@
                     </div>
                     <div class="button_cnt">
                         <button type="submit" title="Send Message"> Send Message </button>
-                    </siv>
+                    </div>
                 </div>
             </div>
         </section>
